force-app/main/default/objects/Purchase_Order__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <displayFormat>PO-{0000}</displayFormat>
    <inlineHelpText>Automatically generated unique number for each purchase order.</inlineHelpText>
    <label>PO Number</label>
    <type>AutoNumber</type>
</CustomField>