force-app/main/default/objects/Purchase_Order__c/validationRules/PO_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Status_Validation</fullName>
    <active>true</active>
    <description>Prevents marking the PO as &apos;Received&apos; if the total cost is zero.</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Received&quot;) &amp;&amp; Total_Cost__c == 0</errorConditionFormula>
    <errorMessage>Total Cost must be greater than zero to mark the PO as &apos;Received.&apos;</errorMessage>
</ValidationRule>